net.certiv.adept/src/net/certiv/adept/lang/antlr/parser/gen/Antlr4Parser.java
// Generated from D:/DevFiles/Eclipse/Tools/Adept/net.certiv.adept/src/net/certiv/adept/lang/antlr/parser/Antlr4Parser.g4 by ANTLR 4.7.2

	package net.certiv.adept.lang.antlr.parser.gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Antlr4Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BLOCKCOMMENT=1, LINECOMMENT=2, INT=3, SET=4, STRING=5, BEG_ACTION=6, BEG_ARGS=7, 
		OPTIONS=8, TOKENS=9, CHANNELS=10, IMPORT=11, CHANNEL=12, LSKIP=13, LMORE=14, 
		LHIDDEN=15, LEOF=16, MODE=17, PUSHMODE=18, POPMODE=19, TYPE=20, FRAGMENT=21, 
		LEXER=22, PARSER=23, GRAMMAR=24, PROTECTED=25, PUBLIC=26, PRIVATE=27, 
		RETURNS=28, LOCALS=29, THROWS=30, CATCH=31, FINALLY=32, AT=33, COLON=34, 
		COLONCOLON=35, COMMA=36, SEMI=37, LPAREN=38, RPAREN=39, LBRACE=40, RBRACE=41, 
		LBRACK=42, RBRACK=43, RARROW=44, EQ=45, QMARK=46, STAR=47, PLUS=48, PLUSEQ=49, 
		NOT=50, OR=51, DOT=52, RANGE=53, DOLLAR=54, POUND=55, ESC=56, SQUOTE=57, 
		DQUOTE=58, ID=59, HWS=60, VWS=61, ERRCHAR=62, END_ACTION=63, ACT_EOF=64, 
		ACT_CONTENT=65, END_ARGS=66, ARG_EOF=67, ARG_CONTENT=68;
	public static final int
		RULE_antlr = 0, RULE_statement = 1, RULE_primary = 2, RULE_cmdBlock = 3, 
		RULE_body = 4, RULE_listStmt = 5, RULE_assignStmt = 6, RULE_atBlock = 7, 
		RULE_ruleSpec = 8, RULE_ruleBlock = 9, RULE_argsBlock = 10, RULE_prequel = 11, 
		RULE_altList = 12, RULE_elements = 13, RULE_element = 14, RULE_namedElement = 15, 
		RULE_altBlock = 16, RULE_set = 17, RULE_pred = 18, RULE_action = 19, RULE_arguments = 20, 
		RULE_function = 21, RULE_attrValue = 22, RULE_dottedID = 23, RULE_label = 24, 
		RULE_id = 25, RULE_keyword = 26, RULE_prefix = 27, RULE_attribute = 28, 
		RULE_op = 29, RULE_mod = 30, RULE_other = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"antlr", "statement", "primary", "cmdBlock", "body", "listStmt", "assignStmt", 
			"atBlock", "ruleSpec", "ruleBlock", "argsBlock", "prequel", "altList", 
			"elements", "element", "namedElement", "altBlock", "set", "pred", "action", 
			"arguments", "function", "attrValue", "dottedID", "label", "id", "keyword", 
			"prefix", "attribute", "op", "mod", "other"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BLOCKCOMMENT", "LINECOMMENT", "INT", "SET", "STRING", "BEG_ACTION", 
			"BEG_ARGS", "OPTIONS", "TOKENS", "CHANNELS", "IMPORT", "CHANNEL", "LSKIP", 
			"LMORE", "LHIDDEN", "LEOF", "MODE", "PUSHMODE", "POPMODE", "TYPE", "FRAGMENT", 
			"LEXER", "PARSER", "GRAMMAR", "PROTECTED", "PUBLIC", "PRIVATE", "RETURNS", 
			"LOCALS", "THROWS", "CATCH", "FINALLY", "AT", "COLON", "COLONCOLON", 
			"COMMA", "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
			"RARROW", "EQ", "QMARK", "STAR", "PLUS", "PLUSEQ", "NOT", "OR", "DOT", 
			"RANGE", "DOLLAR", "POUND", "ESC", "SQUOTE", "DQUOTE", "ID", "HWS", "VWS", 
			"ERRCHAR", "END_ACTION", "ACT_EOF", "ACT_CONTENT", "END_ARGS", "ARG_EOF", 
			"ARG_CONTENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Antlr4Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Antlr4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AntlrContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Antlr4Parser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<RuleSpecContext> ruleSpec() {
			return getRuleContexts(RuleSpecContext.class);
		}
		public RuleSpecContext ruleSpec(int i) {
			return getRuleContext(RuleSpecContext.class,i);
		}
		public List<OtherContext> other() {
			return getRuleContexts(OtherContext.class);
		}
		public OtherContext other(int i) {
			return getRuleContext(OtherContext.class,i);
		}
		public AntlrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_antlr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).enterAntlr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).exitAntlr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Antlr4ParserVisitor ) return ((Antlr4ParserVisitor<? extends T>)visitor).visitAntlr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AntlrContext antlr() throws RecognitionException {
		AntlrContext _localctx = new AntlrContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_antlr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BLOCKCOMMENT) | (1L << LINECOMMENT) | (1L << INT) | (1L << SET) | (1L << STRING) | (1L << BEG_ACTION) | (1L << BEG_ARGS) | (1L << OPTIONS) | (1L << TOKENS) | (1L << CHANNELS) | (1L << IMPORT) | (1L << CHANNEL) | (1L << LSKIP) | (1L << LMORE) | (1L << LHIDDEN) | (1L << LEOF) | (1L << MODE) | (1L << PUSHMODE) | (1L << POPMODE) | (1L << TYPE) | (1L << FRAGMENT) | (1L << LEXER) | (1L << PARSER) | (1L << GRAMMAR) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << RETURNS) | (1L << LOCALS) | (1L << THROWS) | (1L << CATCH) | (1L << FINALLY) | (1L << AT) | (1L << COLON) | (1L << COLONCOLON) | (1L << COMMA) | (1L << SEMI) | (1L << LPAREN) | (1L << RPAREN) | (1L << LBRACE) | (1L << RBRACE) | (1L << LBRACK) | (1L << RBRACK) | (1L << RARROW) | (1L << EQ) | (1L << QMARK) | (1L << STAR) | (1L << PLUS) | (1L << PLUSEQ) | (1L << NOT) | (1L << OR) | (1L << DOT) | (1L << RANGE) | (1L << DOLLAR) | (1L << POUND) | (1L << ESC) | (1L << SQUOTE) | (1L << DQUOTE) | (1L << ID) | (1L << HWS) | (1L << VWS) | (1L << ERRCHAR) | (1L << END_ACTION))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (ACT_EOF - 64)) | (1L << (ACT_CONTENT - 64)) | (1L << (END_ARGS - 64)) | (1L << (ARG_EOF - 64)) | (1L << (ARG_CONTENT - 64)))) != 0)) {
				{
				setState(67);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(64);
					statement();
					}
					break;
				case 2:
					{
					setState(65);
					ruleSpec();
					}
					break;
				case 3:
					{
					setState(66);
					other();
					}
					break;
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class,0);
		}
		public CmdBlockContext cmdBlock() {
			return getRuleContext(CmdBlockContext.class,0);
		}
		public AtBlockContext atBlock() {
			return getRuleContext(AtBlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Antlr4ParserVisitor ) return ((Antlr4ParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				primary();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				cmdBlock();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				atBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(Antlr4Parser.SEMI, 0); }
		public List<KeywordContext> keyword() {
			return getRuleContexts(KeywordContext.class);
		}
		public KeywordContext keyword(int i) {
			return getRuleContext(KeywordContext.class,i);
		}
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).enterPrimary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).exitPrimary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Antlr4ParserVisitor ) return ((Antlr4ParserVisitor<? extends T>)visitor).visitPrimary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryContext primary() throws RecognitionException {
		PrimaryContext _localctx = new PrimaryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_primary);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				keyword();
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPTIONS) | (1L << TOKENS) | (1L << CHANNELS) | (1L << IMPORT) | (1L << LEOF) | (1L << MODE) | (1L << LEXER) | (1L << PARSER) | (1L << GRAMMAR) | (1L << RETURNS) | (1L << LOCALS) | (1L << THROWS) | (1L << CATCH) | (1L << FINALLY) | (1L << COLONCOLON))) != 0) );
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				id();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(89);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdBlockContext extends ParserRuleContext {
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public List<KeywordContext> keyword() {
			return getRuleContexts(KeywordContext.class);
		}
		public KeywordContext keyword(int i) {
			return getRuleContext(KeywordContext.class,i);
		}
		public CmdBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).enterCmdBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).exitCmdBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Antlr4ParserVisitor ) return ((Antlr4ParserVisitor<? extends T>)visitor).visitCmdBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdBlockContext cmdBlock() throws RecognitionException {
		CmdBlockContext _localctx = new CmdBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmdBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(91);
				keyword();
				}
				}
				setState(94); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPTIONS) | (1L << TOKENS) | (1L << CHANNELS) | (1L << IMPORT) | (1L << LEOF) | (1L << MODE) | (1L << LEXER) | (1L << PARSER) | (1L << GRAMMAR) | (1L << RETURNS) | (1L << LOCALS) | (1L << THROWS) | (1L << CATCH) | (1L << FINALLY) | (1L << COLONCOLON))) != 0) );
			setState(96);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(Antlr4Parser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(Antlr4Parser.RBRACE, 0); }
		public ListStmtContext listStmt() {
			return getRuleContext(ListStmtContext.class,0);
		}
		public List<AssignStmtContext> assignStmt() {
			return getRuleContexts(AssignStmtContext.class);
		}
		public AssignStmtContext assignStmt(int i) {
			return getRuleContext(AssignStmtContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Antlr4ParserVisitor ) return ((Antlr4ParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(LBRACE);
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(99);
				listStmt();
				}
				break;
			case 2:
				{
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(100);
					assignStmt();
					}
					}
					setState(103); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				}
				break;
			}
			setState(107);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListStmtContext extends ParserRuleContext {
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(Antlr4Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Antlr4Parser.COMMA, i);
		}
		public ListStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).enterListStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).exitListStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Antlr4ParserVisitor ) return ((Antlr4ParserVisitor<? extends T>)visitor).visitListStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListStmtContext listStmt() throws RecognitionException {
		ListStmtContext _localctx = new ListStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listStmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			id();
			setState(114);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(110);
					match(COMMA);
					setState(111);
					id();
					}
					} 
				}
				setState(116);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(117);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStmtContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode EQ() { return getToken(Antlr4Parser.EQ, 0); }
		public TerminalNode SEMI() { return getToken(Antlr4Parser.SEMI, 0); }
		public DottedIDContext dottedID() {
			return getRuleContext(DottedIDContext.class,0);
		}
		public TerminalNode STRING() { return getToken(Antlr4Parser.STRING, 0); }
		public TerminalNode INT() { return getToken(Antlr4Parser.INT, 0); }
		public AssignStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).enterAssignStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).exitAssignStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Antlr4ParserVisitor ) return ((Antlr4ParserVisitor<? extends T>)visitor).visitAssignStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignStmtContext assignStmt() throws RecognitionException {
		AssignStmtContext _localctx = new AssignStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			id();
			setState(121);
			match(EQ);
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(122);
				dottedID();
				}
				break;
			case STRING:
				{
				setState(123);
				match(STRING);
				}
				break;
			case INT:
				{
				setState(124);
				match(INT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(127);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtBlockContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(Antlr4Parser.AT, 0); }
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(Antlr4Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(Antlr4Parser.ID, i);
		}
		public List<KeywordContext> keyword() {
			return getRuleContexts(KeywordContext.class);
		}
		public KeywordContext keyword(int i) {
			return getRuleContext(KeywordContext.class,i);
		}
		public AtBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).enterAtBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).exitAtBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Antlr4ParserVisitor ) return ((Antlr4ParserVisitor<? extends T>)visitor).visitAtBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtBlockContext atBlock() throws RecognitionException {
		AtBlockContext _localctx = new AtBlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(AT);
			setState(132); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(132);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(130);
					match(ID);
					}
					break;
				case OPTIONS:
				case TOKENS:
				case CHANNELS:
				case IMPORT:
				case LEOF:
				case MODE:
				case LEXER:
				case PARSER:
				case GRAMMAR:
				case RETURNS:
				case LOCALS:
				case THROWS:
				case CATCH:
				case FINALLY:
				case COLONCOLON:
					{
					setState(131);
					keyword();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPTIONS) | (1L << TOKENS) | (1L << CHANNELS) | (1L << IMPORT) | (1L << LEOF) | (1L << MODE) | (1L << LEXER) | (1L << PARSER) | (1L << GRAMMAR) | (1L << RETURNS) | (1L << LOCALS) | (1L << THROWS) | (1L << CATCH) | (1L << FINALLY) | (1L << COLONCOLON) | (1L << ID))) != 0) );
			setState(136);
			action();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleSpecContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public RuleBlockContext ruleBlock() {
			return getRuleContext(RuleBlockContext.class,0);
		}
		public List<PrefixContext> prefix() {
			return getRuleContexts(PrefixContext.class);
		}
		public PrefixContext prefix(int i) {
			return getRuleContext(PrefixContext.class,i);
		}
		public List<ArgsBlockContext> argsBlock() {
			return getRuleContexts(ArgsBlockContext.class);
		}
		public ArgsBlockContext argsBlock(int i) {
			return getRuleContext(ArgsBlockContext.class,i);
		}
		public PrequelContext prequel() {
			return getRuleContext(PrequelContext.class,0);
		}
		public RuleSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).enterRuleSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Antlr4ParserListener ) ((Antlr4ParserListener)listener).exitRuleSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Antlr4ParserVisitor ) return ((Antlr4ParserVisitor<? extends T>)visitor).visitRuleSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleSpecContext ruleSpec() throws RecognitionException {
		RuleSpecContext _localctx = new RuleSpecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ruleSpec);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FRAGMENT) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << PRIVATE))) != 0)) {
				{
				{
				setState(138);
				prefix();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			id();
			setState(148);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(145);
					argsBlock();
					}
					} 
				}
				setState(150);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
